Fixed centered pages feature on Firefox

--- a/css/centerPages.css
+++ b/css/centerPages.css
@@ -1,3 +1,5 @@
 body {
     text-align: -webkit-center;
+    text-align: -moz-center;
+    text-align: -ms-center;
 }
